--- a/index.html
+++ b/index.html
@@ -179,7 +179,9 @@ If the files are not there, you can generate those youself using this make targe
 
 <pre><code>$ npm uninstall dustjs-linkedin</code></pre>
 
-<pre><code>$ npm install</code></pre>
+<pre><code>$ npm install git://github.com/linkedin/dustjs.git</code></pre>
+
+Note: The above issue will go away once we tag the dustjs repo to 1.1 and update the package.json in the dustjs-helpers 
 
 </section>
 
