--- a/index.html
+++ b/index.html
@@ -55,10 +55,6 @@ Dust for client templates at LinkedIn
 <li>composable templates</li>
 </ul>
 
-<h2>Dust Coverage!</h2>
-<ul>
-  <li> Take a look to the dust coverage <a href="http://linkedin.github.com/dustjs/cover_html/index.html">here</a></li>
-</ul>
 
 
 <h2>Dust Quick Tutorial</h2>
@@ -179,6 +175,11 @@ $ make coverage
 <p>To view HTML test coverage report:</p>
 
 <pre><code>$ open cover_html/index.html</code></pre>
+
+<h2>Dust Coverage Online!</h2>
+<ul>
+  <li> Take a look to the dust coverage <a href="http://linkedin.github.com/dustjs/cover_html/index.html">here</a></li>
+</ul>
 
 <h2>Minify dust files</h2>
 
