--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <a href="http://engineering.linkedin.com/frontend/leaving-jsps-dust-moving-linkedin-dustjs-client-side-templates">
 Leaving jsps in the Dust</a></p>
 
-<p>We chose Dust after evaluating a host of others. Read more here :
+<p>We chose Dust after evaluating a bunch of others. Read more here :
 <a href="http://engineering.linkedin.com/frontend/client-side-templating-throwdown-mustache-handlebars-dustjs-and-more">
 Dust for client templates at LinkedIn  
 </a> </p>
@@ -178,24 +178,27 @@ $ make coverage
 
 <h2>Dust Coverage Online!</h2>
 <ul>
-  <li> Take a look to the dust coverage <a href="http://linkedin.github.com/dustjs/cover_html/index.html">here</a></li>
+  <li> <a href="http://linkedin.github.com/dustjs/cover_html/index.html">Click Here</a></li>
 </ul>
 
 <h2>Minify dust files</h2>
 
-<p>If you want to use a minified version of dust, 
-  you will find it in the "dist" folder, inside the dust project. 
-If the files are not there, you can generate those youself using this make target: </p>
+<p>If you need a minified version of Dust, you will find it in the "dist" folder.
+If the minified files do not exist, you can generate them using </p>
 
-<pre><code>$ make min</code></pre>
 
-<p>Before executing the command mentioned above, make sure that you have all the dependencies installed by running the following command on your root project folder: </p>
+<p>Install all the dependencies to minify first</p>
 
 <pre><code>$ npm install</code></pre>
 
+<pre><code>$ make min</code></pre>
+
 
 <h2>Guidelines - Contributing to LinkedIn Dust</h2>
-<p><a href="https://github.com/linkedin/dustjs/wiki/How-to-Contribute">If you love to contribute to this fork</a>
+
+<p>
+
+<a href="https://github.com/linkedin/dustjs/wiki/How-to-Contribute">If you are interested in contributing?</a>
 </p>
 
 
