--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Dust for client templates at LinkedIn
 
 <h4>Extensions and helpers </h4>
 <ul>
-<li>helpers are now in its own node package</li>
+<li>Helpers are now in its own node package<a href="https://github.com/linkedin/dustjs-helpers"> See here </a></li>
 <li>@math for simple math operations such as add/subtract/mod/ceil etc. It also supports branching based on the output of math operation</li>
 <li>@size helper for determining the size of lists/objects/primitives</li>
 <li>@contextDump helper for debugging the current context in the dust stack</li>
