--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@ Dust for client templates at LinkedIn
 <pre><code>$ npm install dustjs-linkedin
 </code></pre>
 
+
+<p>For LinkedIn Dust helpers</p>
+
+<pre><code>$ npm install dustjs-helpers-linkedin
+</code></pre>
+
 <p>To render compiled templates in the browser:</p>
 
 <pre><code>&lt;script src="dust-core-1.0.0.min.js"&gt;&lt;/script&gt;
