--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@ Dust for client templates at LinkedIn
 <li>@contextDump helper for debugging the current context in the dust stack</li>
 </ul>
 
+NOTE: We will remove the dust helpers code from the dustjs-linkedin repo from V1.1.2
+
 
 
 <h2>Installation</h2>
@@ -133,7 +135,7 @@ Dust for client templates at LinkedIn
 
 <p>For LinkedIn Dust helpers</p>
 
-<pre><code>$ npm install dustjs-helpers-linkedin
+<pre><code>$ npm install dustjs-helpers
 </code></pre>
 
 <p>To render compiled templates in the browser:</p>
