--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@ Dust for client templates at LinkedIn
 <li>@contextDump helper for debugging the current context in the dust stack</li>
 </ul>
 
-NOTE: We will remove the dust helpers code from the dustjs-linkedin repo from V1.1.2
+<h1>NOTE: We will remove the dust helpers code from the dustjs-linkedin repo from V1.1.2, use
+  npm install dustjs-helpers instead
+</h1>
 
 
 
