--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@ If the minified files do not exist, you can generate them using </p>
 <h2>Troubleshooting Guide</h2>
 
 
-<p> Are you getting this error message "beta does not have "untap" method" when running tests on dust-js helpers</p>
+<p> Are you getting this error message "beta does not have "untap" method" when running tests on the helpers
+package installed via npm install dustjs-helpers</p>
 
 <p> This error occurs since you have an older version of the dustjs installed, re-install it to fix the problem </p>
 
