Cleanup the helpers from the dust repo, fix the make test

--- a/test/jasmine-test/client/specRunner.html
+++ b/test/jasmine-test/client/specRunner.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="lib/jasmine-1.1.0/jasmine-html.js"></script>
 
   <!-- include spec files here... -->
-  <script src="../spec/grammarTests.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../spec/coreTests.js" type="text/javascript" charset="utf-8"></script>
   <script src="../spec/renderTestSpec.js" type="text/javascript" charset="utf-8"></script>
 
   <!-- include source files here... -->
