minor fix, change title from dust tool to dustjs test tool

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Dust for client templates at LinkedIn
 <li>clean, low-level API</li>
 <li><a href="http://linkedin.github.com/dustjs/benchmark/index.html">high performance</a></li>
 <li>composable templates</li>
-<li><a href="http://linkedin.github.com/dustjs/test/test.html">dust tool</li>
+<li><a href="http://linkedin.github.com/dustjs/test/test.html">dustjs test tool</li>
 </ul>
 
 
