--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ Dust for client templates at LinkedIn
 <li>@contextDump helper for debugging the current context in the dust stack</li>
 </ul>
 
-<h3>NOTE: We will remove the dust helpers code from the dustjs-linkedin repo from V1.1.2, use
-  npm install dustjs-helpers instead
-</h3>
+<h2>NOTE: We have removed dust helpers code from the dustjs-linkedin repo from V1.1.1, use
+  npm install dustjs-helpers instead for using the helpers
+</h2>
 
 
 
