--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@ Dust for client templates at LinkedIn
 <li>clean, low-level API</li>
 <li><a href="http://linkedin.github.com/dustjs/benchmark/index.html">high performance</a></li>
 <li>composable templates</li>
-<li><a href="http://linkedin.github.com/dustjs/test/test.html">dustjs test tool</li>
 </ul>
 
 
@@ -62,6 +61,22 @@ Dust for client templates at LinkedIn
 <p>
 <a href="https://github.com/linkedin/dustjs/wiki/Dust-Tutorial">Learn how to use LinkedIn fork of Dust</a>
 </p>
+
+
+<h2>Dust core features - Code examples</h2>
+<p>
+<a href="">Learn by playing it with the dust templates</a>
+</p>
+
+<h2>Dust helpers - Code examples </h2>
+<p>
+<a href="">Learn how to use the helpers</a>
+</p>
+
+
+
+<li><a href="http://linkedin.github.com/dustjs/test/test.html">dustjs test tool</li>
+
 
 
 <h2>LinkedIn additions include:</h2>
