--- a/index.html
+++ b/index.html
@@ -65,17 +65,13 @@ Dust for client templates at LinkedIn
 
 <h2>Dust core features - Code examples</h2>
 <p>
-<a href="">Learn by playing it with the dust templates</a>
+<a href="http://linkedin.github.com/dustjs/test/test.html">Learn by playing with the dust templates</a>
 </p>
 
 <h2>Dust helpers - Code examples </h2>
 <p>
-<a href="">Learn how to use the helpers</a>
+<a href="http://linkedin.github.com/dustjs-helpers/test/test.html">Learn how to use the helpers</a>
 </p>
-
-
-
-<li><a href="http://linkedin.github.com/dustjs/test/test.html">dustjs test tool</li>
 
 
 
