--- a/test/test.html
+++ b/test/test.html
@@ -10,6 +10,7 @@
 		<script type="text/javascript" src="./dust_files/beautify.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/linkedin/dustjs/master/dist/dust-full-1.1.1.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/linkedin/dustjs/master/test/jasmine-test/spec/coreTests.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/linkedin/dustjs-helpers/master/test/jasmine-test/spec/helpersTests.js"></script>
 		<script type="text/javascript" src="./dust_files/test.js"></script>
 	</head>
 	<body>
