--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Dust for client templates at LinkedIn
 
 <h2>Dust helpers - Code examples </h2>
 <p>
-<a href="http://linkedin.github.com/dustjs-helpers/test/test.html">Learn how to use the helpers</a>
+<a href="http://linkedin.github.com/dustjs/test/test.html?q=helpers">Learn how to use the helpers</a>
 </p>
 
 
