--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@ Dust for client templates at LinkedIn
 </p>
 
 
+<h2>Dust With Express/Node </h2>
+<p>
+<a href="https://github.com/chovy/express-template-demo">Get started with using dust with express in node.js</a>
+</p>
+
+
 
 <h2>LinkedIn additions include:</h2>
 
