group core tests

--- a/test/jasmine-test/client/specRunner.html
+++ b/test/jasmine-test/client/specRunner.html
@@ -15,7 +15,9 @@
   <script src="../spec/renderTestSpec.js" type="text/javascript" charset="utf-8"></script>
 
   <!-- include source files here... -->
-  <script src="../../../dist/dust-full-1.1.1.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="../../../lib/dust.js"></script>
+  <script type="text/javascript" src="../../../lib/parser.js"></script>
+  <script type="text/javascript" src="../../../lib/compiler.js"></script>
 
   <script type="text/javascript">
     (function() {
