--- a/test/test.html
+++ b/test/test.html
@@ -23,7 +23,8 @@
 				</div>
 				<div class="col1">
 					<p>1. Select a template 
-						<span id="select"></span> or write your own:
+						<span id="select-group"></span>
+						<span id="select-test"></span> or write your own:
 					</p>
 					<textarea id="input-source" class="console"></textarea>
 					<div class="status ok">
