fix the select's width in test  page

--- a/test/test.html
+++ b/test/test.html
@@ -26,7 +26,7 @@
 				<div class="col1">
 					<p>1. Select a template 
 						<span id="select-group"></span>
-						<span id="select-test"></span>
+						<span id="select-test"></span> or write your own:
 					</p>
 					<textarea id="input-source" class="console"></textarea>
 					<div class="status ok">
