--- a/test/test.html
+++ b/test/test.html
@@ -8,7 +8,9 @@
 		<script type="text/javascript" src="./dust_files/jquery.min.js"></script>
 		<script type="text/javascript" src="./dust_files/jsdump.js"></script>
 		<script type="text/javascript" src="./dust_files/beautify.js"></script>
-		<script type="text/javascript" src="https://raw.github.com/linkedin/dustjs/master/dist/dust-full-1.1.1.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/linkedin/dustjs/master/lib/dust.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/linkedin/dustjs/master/lib/compiler.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/linkedin/dustjs/master/lib/parser.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/linkedin/dustjs-helpers/master/dist/dust-helpers-1.1.0.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/linkedin/dustjs/master/test/jasmine-test/spec/coreTests.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/linkedin/dustjs-helpers/master/test/jasmine-test/spec/helpersTests.js"></script>
