--- a/index.html
+++ b/index.html
@@ -197,14 +197,14 @@
     </ul>
     <h2>Minify dust files</h2>
     <p>
-      If you need a minified version of Dust, you will find it in the "dist" folder. If the minified files do not exist, you can generate them using
-    </p>
-    <p>
-      Install all the dependencies to minify first
+      Install all the dependencies to minify with
     </p>
     <pre>
       <code>$ npm install</code>
     </pre>
+    <p>
+        Perform the actual minification with
+    </p>
     <pre>
       <code>$ make min</code>
     </pre>
