Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div>
      <h1>Dust<a href="http://travis-ci.org/linkedin/dustjs"><img src="https://secure.travis-ci.org/linkedin/dustjs.png" alt="Build Status"></a>
     </h1>
-   <h2>Dust Highlights!</h2>
+   <h3>Dust Highlights!</h3>
     <ul>
 <li>async/streaming operation</li>
       <li>browser/node compatibility</li>
@@ -85,7 +85,7 @@
     <p>
       <a href="http://linkedin.github.com/dustjs/test/test.html?q=helpers">Learn how to use the helpers</a>
     </p>
-    <h2>Dust With Express/Node </h2>
+    <h3>Dust With Express/Node </h3>
     <p>
       <a href="https://github.com/chovy/express-template-demo">Get started with using dust with express in node.js</a>
     </p>
@@ -208,7 +208,7 @@
     <pre>
       <code>$ make jasmine </code>
     </pre>
-    <h2>Coverage report</h2>
+    <h3>Coverage report</h3>
     <p>
       To generate code coverage report:
     </p>
@@ -221,11 +221,11 @@
     <pre>
       <code>$ open cover_html/index.html</code>
     </pre>
-    <h2>Dust Coverage Online!</h2>
+    <h3>Dust.js Code Coverage Report</h3>
     <ul>
 <li><a href="http://linkedin.github.com/dustjs/cover_html/index.html">Click Here</a></li>
     </ul>
-<h2>Minify dust files</h2>
+<h3>Minify dust.js</h3>
     <p>
       If you need a minified version of Dust, you will find it in the "dist" folder. If the minified files do not exist, you can generate them using
     </p>
