update to description for the 1.2.0 release
update to description for the 1.2.0 release core enhancements

--- a/index.html
+++ b/index.html
@@ -93,9 +93,7 @@
     <h4>Release 1.2.0</h4>
     <h5>Core enhancements</h5>
     <ul>
-<li>Added template trim of white spaces to dust.compile </li>
-      <li>Npm dependencies updated</li>
-      <li>Eol rule removed from buffer rule in the parser</li>
+<li>Added trimming of white spaces in dust templates configuration in the dust.compile ( default option is still true) </li>
     </ul>
 <h5>Bug fixes/ perf improvements</h5>
     <ul>
