Add updates for 1.2.2 release

--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
       <a href="https://github.com/chovy/express-template-demo">Get started with using dust with express in node.js</a>
     </p>
     <h3>LinkedIn additions include:</h3>
+    <h4>Release 1.2.2</h4>
+    <h5>Bug fixes</h5>
+    <ul>
+      <li>GH-245: solve incorrect error line reported in pegjs</li>
+      <li>GH-241: using dust.isArray in place of Array.isArray</li>
+    </ul>
+    <h4>Release 1.2.1</h4>
+    <h5>Bug fixes</h5>
+    <ul>
+      <li><li>GH-220 - Reverted in V1.2.1</li>
+    </ul>
     <h4>Release 1.2.0</h4>
     <h5>Core enhancements</h5>
     <ul>
