--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <h4>Release 1.2.1</h4>
     <h5>Bug fixes</h5>
     <ul>
-      <li><li>GH-220 - Reverted in V1.2.1</li>
+      <li>GH-220 - Reverted in V1.2.1 because of functional issues it introduced</li>
     </ul>
     <h4>Release 1.2.0</h4>
     <h5>Core enhancements</h5>
