--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
       <a href="https://github.com/chovy/express-template-demo">Get started with using dust with express in node.js</a>
     </p>
     <h3>LinkedIn additions include:</h3>
+    <h4>Release 1.2.3</h4>
+    <h5>Perf Improvements for IE7</h5>
+    <ul>
+      <li>PR-253: performance enhancement in IE7</li>
+    </ul>
     <h4>Release 1.2.2</h4>
     <h5>Bug fixes</h5>
     <ul>
