--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -80,7 +80,7 @@
     <script src="suites/handlebars_suite.js"></script>
     <script src="suites/jquery_suite.js"></script>
     <script src="http://github.com/wycats/handlebars.js/raw/766497bb553a926c046c5e5b50ee35529d168ba5/lib/handlebars.js"></script>
-    <script src="http://github.com/janl/mustache.js/raw/master/mustache.js"></script>
+    <!--<script src="http://github.com/janl/mustache.js/raw/master/mustache.js"></script> -->
     <script src="http://github.com/jquery/jquery-tmpl/raw/master/jquery.tmpl.js"></script>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript">
