--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -133,7 +133,7 @@
           });
           dustBench(suite, type, "dust");
           handlebarsBench(suite, type, "handlebars");
-          mustacheBench(suite, type, "mustache");
+          //mustacheBench(suite, type, "mustache");
           jqueryBench(suite, type, "jquery");
           suite.run();
         }
