--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -70,9 +70,9 @@
     <div id="content">
       <div id="charts"></div>
       <p style="clear: both">
-        Targets: <a href="http://linkedin.github.com/dustjs/">Dust</a>, 
+        Targets: <a href="http://linkedin.github.com/dustjs/">Dust 1.2.3</a>, 
         <a href="http://github.com/wycats/handlebars.js">Handlebars</a>, 
-        <a href="http://mustache.github.com/">Mustache</a>, 
+        <!-- <a href="http://mustache.github.com/">Mustache</a>, --> 
         <a href="http://api.jquery.com/tmpl/">jquery-tmpl</a>. 
         Each benchmark runs once using an adaptive test cycles algorithm similar to the one found in 
         <a href="http://github.com/broofa/jslitmus">jslitmus</a>.</p>
@@ -80,7 +80,7 @@
 
     <script src="../vendor/jquery.min.js"></script>
     <script src="uubench.js"></script>
-    <script src="../dist/dust-full-1.0.0.js"></script>
+    <script src="../dist/dust-full-1.2.3.js"></script>
     <script src="suites/dust_suite.js"></script>
     <script src="suites/mustache_suite.js"></script>
     <script src="suites/handlebars_suite.js"></script>
@@ -139,7 +139,8 @@
           });
           dustBench(suite, type, "dust");
           handlebarsBench(suite, type, "handlebars");
-          mustacheBench(suite, type, "mustache");
+          // TODO: fix issue with M and then enable
+         // mustacheBench(suite, type, "mustache");
           jqueryBench(suite, type, "jquery");
           suite.run();
         }
