--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -80,13 +80,13 @@
 
     <script src="../vendor/jquery.min.js"></script>
     <script src="uubench.js"></script>
-    <script src="../dist/dust-full-1.2.3.js"></script>
     <script src="suites/dust_suite.js"></script>
     <script src="suites/mustache_suite.js"></script>
     <script src="suites/handlebars_suite.js"></script>
     <script src="suites/jquery_suite.js"></script>
+    <script src="https://github.com/linkedin/dustjs/blob/master/dist/dust-full-1.2.3.js"></script>
     <script src="http://github.com/wycats/handlebars.js/raw/766497bb553a926c046c5e5b50ee35529d168ba5/lib/handlebars.js"></script>
-    <script src="http://github.com/janl/mustache.js/raw/master/mustache.js"></script>
+    <!--<script src="http://github.com/janl/mustache.js/raw/master/mustache.js"></script>-->
     <script src="http://github.com/jquery/jquery-tmpl/raw/master/jquery.tmpl.js"></script>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript">
