--- a/index.html
+++ b/index.html
@@ -233,7 +233,10 @@
       To generate code coverage report:
     </p>
     <pre>
-      <code>$ npm install cover -g $ make coverage </code>
+      <code>$ npm install cover -g </code>
+    </pre>
+    <pre>  
+      <code>$ make coverage </code>
     </pre>
     <p>
       To view HTML test coverage report:
