--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
       <a href="https://github.com/chovy/express-template-demo">Get started with using dust with express in node.js</a>
     </p>
     <h3>LinkedIn additions include:</h3>
+    <h4>Release 2.0.0</h4>
+    <h5>Core Enhancements</h5>
+    PR-305 change the default getPath behaviour to walk up the context tree 
+    GH-292,GH-266 support storing the current template name in the global context
+    PR-295, upgrade jasmine-node to work with node 0.10
+    PR-278, remove the strip option that was added in previous releases
+    PR-263, enhanced |j filter
+    <h5>Bug fixes</h5>
+    PR-289, fix the CacheVM context across `dust.loadSource` calls for node.js
     <h4>Release 1.2.3</h4>
     <h5>Perf Improvements for IE7</h5>
     <ul>
