--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
     <h3>LinkedIn additions include:</h3>
     <h4>Release 2.0.0</h4>
     <h5>Core Enhancements</h5>
-    PR-305 change the default getPath behaviour to walk up the context tree 
-    GH-292,GH-266 support storing the current template name in the global context
-    PR-295, upgrade jasmine-node to work with node 0.10
-    PR-278, remove the strip option that was added in previous releases
-    PR-263, enhanced |j filter
+    <li>PR-305 change the default getPath behaviour to walk up the context tree</li>
+    <li>GH-292,GH-266 support storing the current template name in the global context</li>
+    <li><PR-295, upgrade jasmine-node to work with node 0.10</li>
+    <li><PR-278, remove the strip option that was added in previous releases</li>
+    <li>PR-263, enhanced |j filter</li>
     <h5>Bug fixes</h5>
     PR-289, fix the CacheVM context across `dust.loadSource` calls for node.js
     <h4>Release 1.2.3</h4>
