--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <h3>LinkedIn additions include:</h3>
     <h4>Release 2.0.0</h4>
     <h5>Core Enhancements</h5>
-    <li>PR-305 change the default getPath behaviour to walk up the context tree</li>
+    <li>PR-305 <a href="https://github.com/linkedin/dustjs/wiki/Dust-Tutorial#wiki-New_path_behavior_available_as_of_dust_200_release">change the default getPath behaviour to walk up the context tree</a></li>
     <li>GH-292,GH-266 support storing the current template name in the global context</li>
     <li>PR-295, upgrade jasmine-node to work with node 0.10</li>
     <li>PR-278, remove the strip option that was added in previous releases</li>
