--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
       Dust for client templates at LinkedIn </a>
     </p>
     <p>
+      We built one of our high volume app Profile using dust and we heavily focus on performance. Here is the
+      <a href="http://velocityconf.com/velocity2013/public/schedule/detail/28457"/>Velocity tech talk</a> 
+      <a href="http://www.slideshare.net/veenabs/velocity-dust">
+      The Curious case of Dust.js and performance </a>
+    </p>
+    
+    <p>
       We will gradually be extending this library with core feature enhancements, helper functions and bug fixes.
     </p>
     
