reference issue #328 for 2.0.3

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <h4>Release 2.0.3</h4>
         <ul>
           <li>PR-323, GH-322 - dynamic blocks {+"{dynam}"} has been corrected. It was adding the data twice.</li>
-          <li>move template name from global to the context</li>
+          <li>GH-328 - move template name from global to the context</li>
         </ul>
         <h4>Release 2.0.2, (2.0.1)</h4>
         <ul>
