Add context.getTemplateName function, unit test for template names in partials, and dist files

--- a/test/jasmine-test/client/specRunner.html
+++ b/test/jasmine-test/client/specRunner.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="../../../lib/dust.js"></script>
   <script type="text/javascript" src="../../../lib/parser.js"></script>
   <script type="text/javascript" src="../../../lib/compiler.js"></script>
+  <script type="text/javascript" src="../spec/testHelpers.js"></script>
 
   <script type="text/javascript">
     (function() {
