--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -72,16 +72,17 @@
       <p style="clear: both">Targets: <a href="http://akdubya.github.com/dustjs">Dust</a>, <a href="http://github.com/wycats/handlebars.js">Handlebars</a>, <a href="http://mustache.github.com/">Mustache</a>, <a href="http://api.jquery.com/tmpl/">jquery-tmpl</a>. Each benchmark runs once using an adaptive test cycles algorithm similar to the one found in <a href="http://github.com/broofa/jslitmus">jslitmus</a>.</p>
     </div>
 
-    <script src="../vendor/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="uubench.js"></script>
-    <script src="../dist/dust-full-0.2.5.min.js"></script>
+    <script src="../dist/dust-full.min.js"></script>
     <script src="suites/dust_suite.js"></script>
     <script src="suites/mustache_suite.js"></script>
     <script src="suites/handlebars_suite.js"></script>
     <script src="suites/jquery_suite.js"></script>
-    <script src="http://github.com/wycats/handlebars.js/raw/766497bb553a926c046c5e5b50ee35529d168ba5/lib/handlebars.js"></script>
-    <!--<script src="http://github.com/janl/mustache.js/raw/master/mustache.js"></script> -->
-    <script src="http://github.com/jquery/jquery-tmpl/raw/master/jquery.tmpl.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.1.2/handlebars.min.js"></script>
+    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script> -->
+    <!-- jquery tmpl is no longer maintained, using rawgithub as a last resort. Do not use rawgithub in prod. Use real CDNs for that -->
+    <script src="http://rawgithub.com/BorisMoore/jquery-tmpl/master/jquery.tmpl.js"></script>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript">
       google.load('visualization', '1.0', {packages: ['imagechart']});
