update benchmarks remove unnecessary stuff and update gh-pages docs

--- a/test/test.html
+++ b/test/test.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript" src="./dust_files/jquery.min.js"></script>
 		<script type="text/javascript" src="./dust_files/jsdump.js"></script>
 		<script type="text/javascript" src="./dust_files/beautify.js"></script>
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/dustjs/2.0.2/dust-full.min.js"></script>
+		<script type="text/javascript" src="../dist/dust-full.min.js"></script>
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/dustjs.helpers/1.1.1/dust-helpers-1.1.1.js"></script>
 		<script type="text/javascript" src="./dust_files/coreTests.js"></script>
 		<script type="text/javascript" src="./dust_files/helpersTests.js"></script>
