benchmark is using the latest version not 1.2.3

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -70,7 +70,7 @@
     <div id="content">
       <div id="charts"></div>
       <p style="clear: both">
-        Targets: <a href="https://linkedin.github.com/dustjs/">Dust 1.2.3</a>, 
+        Targets: <a href="https://linkedin.github.com/dustjs/">Dust</a>, 
         <a href="https://github.com/wycats/handlebars.js">Handlebars</a>, 
         <a href="https://mustache.github.com/">Mustache</a>, 
         <a href="https://api.jquery.com/tmpl/">jquery-tmpl</a>. 
