--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       <div>
         <h2>Guidelines - Contributing to LinkedIn Dust</h2>
         <p>
-          <a href="https://github.com/linkedin/dustjs/wiki/How-to-Contribute">If you are interested in contributing?</a>
+          If you are interested in contributing to Dust, please read our <a href="https://github.com/linkedin/dustjs/wiki/How-to-Contribute">contributing guideline</a>
         </p>
       </div>
       <hr>
