--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -77,6 +77,7 @@
         <a href="https://github.com/broofa/jslitmus">jslitmus</a>.</p>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="uubench.js"></script>
     <script src="suites/dust_suite.js"></script>
     <script src="suites/mustache_suite.js"></script>
