--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -140,6 +140,7 @@
           dustBench(suite, type, test, "dust");
           handlebarsBench(suite, type, test, "handlebars");
           mustacheBench(suite, type, test, "mustache");
+          htmlbarsBench(suite, type, test, "htmlbars");
           suite.run();
         }
 
