include htmlbars suite

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -82,6 +82,7 @@
     <script src="suites/dust_suite.js"></script>
     <script src="suites/mustache_suite.js"></script>
     <script src="suites/handlebars_suite.js"></script>
+    <script src="suites/htmlbars_suite.js"></script>
     <script src="../dist/dust-full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.1.2/handlebars.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
