--- a/test/test.html
+++ b/test/test.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="./dust_files/jsdump.js"></script>
 		<script type="text/javascript" src="./dust_files/beautify.js"></script>
 		<script type="text/javascript" src="../dist/dust-full.min.js"></script>
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/dustjs.helpers/1.1.1/dust-helpers-1.1.1.js"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/dustjs-helpers/1.5.0/dust-helpers.min.js"></script>
 		<script type="text/javascript" src="./dust_files/coreTests.js"></script>
 		<script type="text/javascript" src="./dust_files/helpersTests.js"></script>
 		<script type="text/javascript" src="./dust_files/test.js"></script>
@@ -22,7 +22,7 @@
 		  		<img src="./dust_files/images/logo-linkedin.png" height="55" width="55" alt="LinkedIn" class="logo">
 				</div>
 				<div class="col1">
-					<p>1. Select a template 
+					<p>1. Select a template
 						<span id="select-group"></span>
 						<span id="select-test"></span> or write your own:
 					</p>
