--- a/test/test.html
+++ b/test/test.html
@@ -5,7 +5,7 @@
 		<title>dust</title>
 		<link href="./dust_files/style.css" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="./dust_files/ecma.js"></script>
-		<script type="text/javascript" src="./dust_files/jquery.min.js"></script>
+		<script type="text/javascript" src="//cdn.jsdelivr.net/jquery/1.4.4/jquery-1.4.4.min.js"></script>
 		<script type="text/javascript" src="./dust_files/jsdump.js"></script>
 		<script type="text/javascript" src="./dust_files/beautify.js"></script>
 		<script type="text/javascript" src="//cdn.jsdelivr.net/dustjs/latest/dust-full.min.js"></script>
